--- a/Trial/style.css
+++ b/Trial/style.css
@@ -11,6 +11,11 @@ button {
     color: inherit;
     cursor: pointer;
 }
+hr{
+    margin-top: 28px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
 
 .heading{
     display: flex;
@@ -44,4 +49,15 @@ button {
 .door{
     height: 38px;
     width: 38px;
+}
+.input{
+    border-radius: 50%;
+}
+.bigsearchbar{
+    border-radius: 20px;
+    width: 600px;
+    height: 40px;
+    margin-top: 30px;
+    display: inline;
+    margin-left: 30%;
 }
