--- a/Trial/style.css
+++ b/Trial/style.css
@@ -13,8 +13,9 @@ button {
 }
 hr{
     margin-top: 28px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-right: 150px;
+    margin-left: 150px;
+    color: gray;
 }
 
 .heading{
@@ -60,4 +61,8 @@ hr{
     margin-top: 30px;
     display: inline;
     margin-left: 30%;
+    border: 2px solid ;
+}
+.bigsearchbar::placeholder{
+    padding-left: 10px;
 }
