--- a/Trial/style.css
+++ b/Trial/style.css
@@ -61,9 +61,12 @@ hr{
     margin-top: 30px;
     display: inline;
     margin-left: 30%;
-    border: 2px solid ;
+    border: 2px solid rgb(47,167,222);
 }
 .bigsearchbar::placeholder{
     padding-left: 10px;
     font-size: medium;
+}
+.textunderneath{
+    color: blue;
 }
