--- a/Trial/style.css
+++ b/Trial/style.css
@@ -67,6 +67,10 @@ hr{
     padding-left: 10px;
     font-size: medium;
 }
+.textunder{
+    margin-left: 32%;
+    margin-top: -4px;
+}
 .textunderneath{
-    color: blue;
+    color: rgb(47,167,222);
 }
