--- a/Trial/style.css
+++ b/Trial/style.css
@@ -94,13 +94,33 @@ hr{
 }
 .card{
     display: flex;
+    justify-content: space-around;
+    margin-left: 220px;
+    margin-right: 220px;
+    margin-top: 30px
 }
+
 .card-one{
     background-color: rgb(229,153,247);
+    height: 300px;
+    width: 220px;
+    border-radius: 15px;
+ 
 }
 .card-two{
     background-color: rgb(116,192,252);
+    height: 280px;
+    width: 200px;
+    border-radius: 15px;
 }
 .card-three{
     background-color: rgb(99,230,190);
+    height: 260px;
+    width: 180px;
+    border-radius: 15px;
+}
+.cardoneitem .cardtwoitem .cardthreeitem{
+    height: 80px;
+    width: 80px;
+    margin: 30px;
 }
